# stockAlgos

./: .gitattributes  .gitignore  CMakeLists.txt  binance.sln  binance.vcxproj  binance.vcxproj.filters
assets/: tradingRules.json
assets/candles/: 1h_3years.json  9760_1h.json  ADAUSDT_1m.json  AVAXUSDT_1m.json  AXSUSDT_1m.json  BCHUSDT_1m.json  BNBUSDT_1m.json  BTCBUSD_1m.json  BTCUSDT_1m.json  CRVUSDT_1m.json  DOGEUSDT_1m.json  DOTUSDT_1m.json  ENJUSDT_1m.json  EOSUSDT_1m.json  ETCUSDT_1m.json  ETHUSDT_1m.json  FILUSDT_1m.json  LINKUSDT_1m.json  LTCUSDT_1m.json  MANAUSDT_1m.json  MATICUSDT_1m.json  NEARUSDT_1m.json  SANDUSDT_1m.json  SHIBUSDT_1m.json  SOLUSDT_1m.json  THETAUSDT_1m.json  WAVESUSDT_1m.json  XLMUSDT_1m.json  XMRUSDT_1m.json  XRPUSDT_1m.json  XTZUSDT_1m.json  ZECUSDT_1m.json
assets/examples/: calculationSettings.json  combinationSettings.json  combinationSettingsST.json  combinationSettingsSTMA.json  singleCalculation.json  singleCalculationSTMA.json
assets/market/: BTCUSDT_data.json  ETHUSDT_data.json  binance.json  liqudationPrices.xlsx  tradingRules.json
assets/tests/: 1000_15m.json  1500_15m.json  300_15m.json  example.json  test1.json  test2.json  test3.json  test4.json  testIndicators.json  testsHelper.xlsx  testsVersions.xlsx
binance/: candle.h
input/: calculationSettings.json  combinationSettings.json  filterSettings.json  singleCalculation.json
src/: main.cpp
src/algorithm/: activationWaiter.cpp  activationWaiter.h  algorithmBase.cpp  algorithmBase.h  algorithmBase.hpp  algorithmDataBase.cpp  algorithmDataBase.h  moneyMaker.cpp  (+15 more)
utilities/: generateProject.bat
(+125 files in other folders)
