cmake_minimum_required(VERSION 3.22.1)

project(stockAlgos)

set(CPP_VERSION 17)
set(CMAKE_SUPPRESS_REGENERATION true)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/utilities/cmake/")
include(sources)
include(macros)

GENERATE_SOURCE_GROUPS("${CMAKE_SOURCE_DIR}/src/" ${SOURCES})

include_directories(src)

set(CMAKE_CXX_FLAGS  "-W4 -EHsc" )
set(CMAKE_CXX_FLAGS_RELEASE "-Ox -GL")
set(CMAKE_EXE_LINKER_FLAGS "-LTCG")
add_executable(${PROJECT_NAME} ${SOURCES})

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD ${CPP_VERSION})
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR} )
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR} )
set_target_properties(${PROJECT_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})